# ibkr-options-bot

./: # Analysis and Trading Strategy for Jan 26.md  # Round 3 QA Review - Addendum.py  .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  1222026 1213pm briefing.sty  ACTION_PLAN_HISTORICAL_TIMEOUT.md  ACTION_REPORT_PROFIT_TARGETS.md  ANALYSIS_2026_01_09_LOG_REVIEW.md  Bot Log 1 01022026.md  CLIENT_261_LOG_ANALYSIS_2026_01_12.md  CORRECTED_ASSESSMENT_AND_RETEST_PLAN.md  CRITICAL_UPDATE_MARKETS_OPEN.md  DOCUMENTATION_INDEX_20260112.md  Deployment Readiness QA Round 1 Report - IBKR Options Trading Bot.md  Dockerfile  Dry Run 1 01082026 Observations and Questions.md  EXTENDED_DRY_RUN_2026-01-07.md  FINAL_REPORT_AGGRESSIVE_STRATEGY.md  FINAL_SESSION_REPORT_2026-01-08.md  FINAL_SESSION_REPORT_2026_01_13.md  FINAL_SESSION_REPORT_2026_01_14.md  FINAL_SESSION_REPORT_2026_01_15.md  FINAL_SESSION_REPORT_2026_01_16.md  FINAL_SESSION_REPORT_2026_01_21.md  FINAL_SESSION_REPORT_2026_01_22.md  FINAL_SESSION_REPORT_2026_01_22_PM.md  FINAL_STATUS_REPORT_2026-01-08.md  FINAL_STATUS_REPORT_2026_01_12_SESSION.md  FINAL_STATUS_REPORT_RESTART.md  GATEWAY_SETUP_WINDOWS.md  GIT_PUSH_MANUAL_INSTRUCTIONS.md  IBKR Support Response 1 01072026.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_COMPLETE_2026_01_09.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_STATUS_2026_01_13.md  IMPLEMENTATION_SUMMARY_2026-01-09.md  (+115 more)
.github/: copilot-instructions.md
configs/: Unified configuration via Pydantic.md  settings.yaml
docs/: GATEWAY_AUTH_INSTRUCTIONS.md  GATEWAY_QUICKSTART.md  (+5 more)
(+43 files in other folders)
